--- a/SLF4J_STUDY/pom.xml
+++ b/SLF4J_STUDY/pom.xml
@@ -18,6 +18,12 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.7.25</version>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
+        </dependency>
+
         <!-- slf4j 自带的简单日志实现 -->
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -25,6 +31,7 @@
             <version>1.7.25</version>
             <scope>test</scope>
         </dependency>
+
 
         <dependency>
             <groupId>junit</groupId>
