--- a/LOG4J_STUDY/src/main/resources/log4j.properties
+++ b/LOG4J_STUDY/src/main/resources/log4j.properties
@@ -6,4 +6,6 @@ log4j.appender.console=org.apache.log4j.ConsoleAppender
 #log4j.appender.console.layout=org.apache.log4j.SimpleLayout
 #log4j.appender.console.layout=org.apache.log4j.HTMLLayout
 #log4j.appender.console.layout=org.apache.log4j.xml.XMLLayout
-log4j.appender.console.layout=org.apache.log4j.
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+#\u914D\u7F6E\u5C5E\u6027
+log4j.appender.console.layout.conversionPattern=%r [%t] %p %c %x - %m%n
