日志记录文件，日志拆分，日志按照时间记录，日志记录数据库

--- a/LOG4J_STUDY/src/main/resources/log4j.properties
+++ b/LOG4J_STUDY/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 # , \u5206\u5272 \u7B2C\u4E00\u4E2A\u4E3A\u65E5\u5FD7\u7EA7\u522B \u5176\u4ED6\u4E3A\u914D\u7F6E\u7684\u5176\u4ED6\u4FE1\u606F  eg: level,appenderName,appenderName,appenderName,appenderName
-log4j.rootLogger=trace,console
-# \u914D\u7F6Eappender\u8F93\u51FA\u65B9\u5F0F
+log4j.rootLogger=trace,console,logBb
+# \u914D\u7F6Eappender\u8F93\u51FA\u65B9\u5F0F    \u8F93\u51FA\u5230\u63A7\u5236\u53F0
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 # \u914D\u7F6E\u8F93\u51FA\u683C\u5F0F
 #log4j.appender.console.layout=org.apache.log4j.SimpleLayout
@@ -8,4 +8,47 @@ log4j.appender.console=org.apache.log4j.ConsoleAppender
 #log4j.appender.console.layout=org.apache.log4j.xml.XMLLayout
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 #\u914D\u7F6E\u5C5E\u6027
-log4j.appender.console.layout.conversionPattern=%r [%t] %p %c %x - %m%n
+log4j.appender.console.layout.conversionPattern=[%-10p]%r %c %t %d{yyyy-MM-dd HH:mm:ss:SSS} %m%n
+
+# \u914D\u7F6Eappender\u8F93\u51FA\u65B9\u5F0F    \u8F93\u51FA\u5230\u6587\u4EF6
+log4j.appender.file=org.apache.log4j.FileAppender
+log4j.appender.file.file=F://log4jFiles//my.log
+log4j.appender.file.encoding=UTF-8
+#\u914D\u7F6E\u65E5\u5FD7\u663E\u793A\u5C5E\u6027
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.conversionPattern=[%-10p]%r %c %t %d{yyyy-MM-dd HH:mm:ss:SSS} %m%n
+
+# \u914D\u7F6Eappender\u8F93\u51FA\u65B9\u5F0F    \u8F93\u51FA\u5230\u6587\u4EF6(\u62C6\u5206\u7684\u5F62\u5F0F)
+log4j.appender.rollingFile=org.apache.log4j.RollingFileAppender
+log4j.appender.rollingFile.file=F://log4jFiles//rolling.log
+log4j.appender.rollingFile.encoding=UTF-8
+# \u8868\u793A\u6587\u4EF6\u5927\u5C0F
+log4j.appender.rollingFile.maxFileSize=1KB
+# \u8868\u793A\u6587\u4EF6\u4E2A\u6570
+log4j.appender.rollingFile.maxBackupIndex=5
+#\u914D\u7F6E\u65E5\u5FD7\u663E\u793A\u5C5E\u6027
+log4j.appender.rollingFile.layout=org.apache.log4j.PatternLayout
+log4j.appender.rollingFile.layout.conversionPattern=[%-10p]%r %c %t %d{yyyy-MM-dd HH:mm:ss:SSS} %m%n
+
+# \u914D\u7F6Eappender\u8F93\u51FA\u65B9\u5F0F    \u6839\u636E\u65F6\u95F4\u8FDB\u884C\u62C6\u5206
+log4j.appender.dailyRollingFile=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.dailyRollingFile.file=F://log4jFiles//DailyRolling.log
+log4j.appender.dailyRollingFile.encoding=UTF-8
+# \u6309\u7167\u79D2\u6765\u8FDB\u884C\u62C6\u5206
+log4j.appender.dailyRollingFile.datePattern='.'yyyy-MM-dd HH-mm-ss
+#\u914D\u7F6E\u65E5\u5FD7\u663E\u793A\u5C5E\u6027
+log4j.appender.dailyRollingFile.layout=org.apache.log4j.PatternLayout
+log4j.appender.dailyRollingFile.layout.conversionPattern=[%-10p]%r %c %t %d{yyyy-MM-dd HH:mm:ss:SSS} %m%n
+
+# \u8F93\u51FA\u5230\u6570\u636E\u5E93\u8868\u4E2D
+log4j.appender.logBb=org.apache.log4j.jdbc.JDBCAppender
+log4j.appender.logBb.layout=org.apache.log4j.PatternLayout
+# \u8BBE\u7F6E\u9A71\u52A8\u3001mysql\u8FDE\u63A5\u4FE1\u606F
+log4j.appender.logBb.Driver=com.mysql.cj.jdbc.Driver
+log4j.appender.logBb.URL=jdbc:mysql://ecs01:3306/testinsert
+log4j.appender.logBb.User=test
+log4j.appender.logBb.Password=test
+log4j.appender.logBb.Sql=INSERT INTO tb1_log(name,createTime,level,category,filename,message) VALUES('log','%d{yyyy-MM-dd HH-mm-ss}','%p','%c','%F','%m')
+
+
+
