自定义输出日志

--- a/LOG4J_STUDY/src/main/resources/log4j.properties
+++ b/LOG4J_STUDY/src/main/resources/log4j.properties
@@ -1,11 +1,18 @@
 # , \u5206\u5272 \u7B2C\u4E00\u4E2A\u4E3A\u65E5\u5FD7\u7EA7\u522B \u5176\u4ED6\u4E3A\u914D\u7F6E\u7684\u5176\u4ED6\u4FE1\u606F  eg: level,appenderName,appenderName,appenderName,appenderName
-log4j.rootLogger=trace,console,logBb
+log4j.rootLogger=trace,console
+
+# \u81EA\u5B9A\u4E49\u81EA\u5DF1\u7684Logger\u65E5\u5FD7,\u4F46\u662FrootLogger\u8FD8\u662F\u6240\u6709logger\u7684\u7236logger
+log4j.logger.com=info,file
+# \u81EA\u5B9A\u4E49apache\u7684\u9519\u8BEF\u65E5\u5FD7
+log4j.logger.org.apache=error
+
 # \u914D\u7F6Eappender\u8F93\u51FA\u65B9\u5F0F    \u8F93\u51FA\u5230\u63A7\u5236\u53F0
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 # \u914D\u7F6E\u8F93\u51FA\u683C\u5F0F
 #log4j.appender.console.layout=org.apache.log4j.SimpleLayout
 #log4j.appender.console.layout=org.apache.log4j.HTMLLayout
 #log4j.appender.console.layout=org.apache.log4j.xml.XMLLayout
+log4j.appender.console.encoding=UTF-8
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 #\u914D\u7F6E\u5C5E\u6027
 log4j.appender.console.layout.conversionPattern=[%-10p]%r %c %t %d{yyyy-MM-dd HH:mm:ss:SSS} %m%n
