--- a/SLF4J_STUDY/pom.xml
+++ b/SLF4J_STUDY/pom.xml
@@ -19,6 +19,15 @@
             <version>1.7.25</version>
         </dependency>
 
+        <!-- 集成JUL -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>1.7.25</version>
+            <scope>test</scope>
+        </dependency>
+
+
 
         <!-- slf4j 自带的简单日志实现 -->
 <!--        <dependency>-->
@@ -42,18 +51,18 @@
 <!--        </dependency>-->
 
 
-        <!-- 导入log4j适配器 -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>1.7.25</version>
-        </dependency>
-        <!-- 导入Log4依赖 -->
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
-        </dependency>
+<!--        &lt;!&ndash; 导入log4j适配器 &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.slf4j</groupId>-->
+<!--            <artifactId>slf4j-log4j12</artifactId>-->
+<!--            <version>1.7.25</version>-->
+<!--        </dependency>-->
+<!--        &lt;!&ndash; 导入Log4依赖 &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>log4j</groupId>-->
+<!--            <artifactId>log4j</artifactId>-->
+<!--            <version>1.2.17</version>-->
+<!--        </dependency>-->
 
 
 
