--- a/LOG4J2/pom.xml
+++ b/LOG4J2/pom.xml
@@ -11,6 +11,14 @@
 
     <artifactId>LOG4J2</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.12.1</version>
+        </dependency>
+    </dependencies>
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
