--- a/LOG4J2_SLF4J/pom.xml
+++ b/LOG4J2_SLF4J/pom.xml
@@ -13,17 +13,18 @@
     <version>1.0.0</version>
 
     <dependencies>
-        <!-- log4j2 -->
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>2.12.1</version>
-        </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
             <version>2.12.1</version>
         </dependency>
+        <!-- Apache Log4j SLF4J Binding » 2.12.1 -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>2.12.1</version>
+        </dependency>
+
     </dependencies>
 
 
