--- a/LOG4J2_SLF4J/pom.xml
+++ b/LOG4J2_SLF4J/pom.xml
@@ -24,6 +24,12 @@
             <artifactId>log4j-slf4j-impl</artifactId>
             <version>2.12.1</version>
         </dependency>
+        <!-- 异步日志依赖 -->
+        <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+            <version>3.3.7</version>
+        </dependency>
 
     </dependencies>
 
